# ask-my-data-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
data/: build_sample_db.py
data/docs/: evaluation_guide.md  faq.md  glossary.md  metrics.md  process.md  realtime_collaboration_ot_crdt.md  retrieval_methods.md
scripts/: smoke_test.py
src/: __init__.py  cli.py  config.py  graph.py  llm.py  rag.py  router.py  synthesize.py  text2sql.py
tests/: test_sample_data.py  test_text2sql.py
